# fock

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: cmake.yml
app/: CMakeLists.txt  main.cpp
bench/: CMakeLists.txt  benchmark_build_hamiltonian.cpp
benchmarks/: CMakeLists.txt  bench_library.cpp
examples/: CMakeLists.txt  basis_states.cpp  bitmask_manipulation.cpp  main.cpp
examples/minimal/: CMakeLists.txt  build_hamiltonian.cpp  temporary.cpp
examples/single_particle/: CMakeLists.txt  modular_hamiltonian.cpp  subregion_correlation_matrix.cpp  varying_subregion_length.cpp  varying_subregion_size.cpp
include/fock/: lattice.hpp  library.h  library.hpp  multiple_particle.h  single_particle.h
src/: bitmask.cpp  build_modular_hamiltonian.cpp  build_subregion_correlation_matrix.cpp  entanglement_entropy.cpp  lattice.cpp  library.cpp  matrix.cpp  single_particle.cpp
